tests/integration/tests/invalid_input/04_nonempty_check_file_but_no_checks/sample.itest
; RUN: %printf "" | %expect_exit 2 %FILECHECK_EXEC "%S/filecheck.check" | %FILECHECK_TESTER_EXEC "%s" --match-full-lines

; CHECK: error: no check strings found with prefix 'CHECK:'
; CHECK-EMPTY
